--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,12 @@
 ul {
   list-style-type: none;
   display: flex;
-  gap: 10px;
+  gap: 6px;
   margin: 0;
   margin-top: 0.5em;
-  font-size: 14px;
+  font-size: 12px;
   padding-inline-start: 0;
-  color: var(--secondary-color);
+  color: #7d7d7d;
 }
 
 body {
@@ -51,16 +51,30 @@ button {
   align-items: center;
 }
 
+.searchbar-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.searchbar-wrapper input {
+  padding: 4px;
+}
+
 .music-player-container {
   width: 100%;
   max-width: 800px;
-  background-color: #fff;
-  border-radius: 6px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #eaeaea;
+  /* border-radius: 6px; */
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
   padding: 6px 10px;
   padding-right: 0px;
-  margin-bottom: 5px;
-  /* border-bottom: 1px solid rgb(231, 231, 231); */
+  /* margin-bottom: 5px; */
+  border-bottom: 1px solid rgb(207, 207, 207);
+}
+
+.tags {
+  color: #313131;
+  font-size: 12px;
 }
 
 .music-player {
@@ -83,6 +97,7 @@ button {
 
 .sample-title-progress {
   text-align: left;
+  width: 250px;
 }
 
 #song-progress {
@@ -114,7 +129,7 @@ button {
 }
 
 .attribute-container {
-  border-left: 0.5px solid rgb(221, 221, 221);
+  border-left: 0.5px solid rgb(197, 197, 197);
   padding-left: 11px;
   height: 100%;
 }
@@ -130,7 +145,7 @@ button {
 }
 
 .border-right {
-  border-right: 0.5px solid rgb(221, 221, 221);
+  border-right: 0.5px solid rgb(197, 197, 197);
   padding-right: 11px;
 }
 
