--- a/src/App.css
+++ b/src/App.css
@@ -26,12 +26,13 @@ ul {
 
 body {
   /* font-family: "Arial", sans-serif; */
-  background-color: #f4f4f4;
+  background-color: #393939;
   color: #313131;
   padding: 20px;
   font-family: "owners-text", sans-serif;
   font-weight: 500;
   font-style: normal;
+  max-height: 100vh;
 }
 
 button {
@@ -58,6 +59,15 @@ button {
 
 .searchbar-wrapper input {
   padding: 4px;
+}
+
+.samples-list {
+  max-height: 70vh;
+  overflow-y: scroll;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  overflow-x: hidden;
+  /* box-shadow: inset 0 5px 10px rgba(0, 0, 0, 0.1); */
 }
 
 .music-player-container {
