--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,12 @@
   --secondary-color: #00e093;
 }
 
+.filterable-sample-list {
+  display: flex;
+  gap: 1rem;
+}
+
+
 .headline {
   font-size: 1.5rem;
   text-align: left;
@@ -26,13 +32,13 @@ ul {
 
 body {
   /* font-family: "Arial", sans-serif; */
-  background-color: #393939;
+  background-color: #f4f4f4;
   color: #313131;
   padding: 20px;
   font-family: "owners-text", sans-serif;
   font-weight: 500;
   font-style: normal;
-  max-height: 100vh;
+  /* max-height: 100vh; */
 }
 
 button {
@@ -61,25 +67,25 @@ button {
   padding: 4px;
 }
 
-.samples-list {
+/* .samples-list {
   max-height: 70vh;
   overflow-y: scroll;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
   overflow-x: hidden;
-  /* box-shadow: inset 0 5px 10px rgba(0, 0, 0, 0.1); */
-}
+  
+} */
 
 .music-player-container {
   width: 100%;
   max-width: 800px;
-  background-color: #eaeaea;
-  /* border-radius: 6px; */
-  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
+  background-color: #ffffff;
+  border-radius: 6px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 6px 10px;
   padding-right: 0px;
-  /* margin-bottom: 5px; */
-  border-bottom: 1px solid rgb(207, 207, 207);
+  margin-bottom: 5px;
+  /* border-bottom: 1px solid rgb(207, 207, 207); */
 }
 
 .tags {
