created Navbar Component, Starteds Routing using React-Router-Dom, started Login Page

--- a/src/App.css
+++ b/src/App.css
@@ -1,47 +1,97 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  /* max-width: 1280px; */
+  /* margin: 0 auto; */
   text-align: center;
   box-sizing: border-box;
   --secondary-color: #00e093;
+  box-sizing: border-box;
 }
 
-.filterable-sample-list {
+/********* - Login/Register Forms - ***********/
+
+.form-section {
   display: flex;
-  gap: 1rem;
+  align-items: center;
+  justify-content: center;
 }
 
+.form-headline {
+  font-weight: 600;
+  color: rgb(17, 17, 17);
+  font-size: 1.7rem;
+  text-transform: capitalize;
+  line-height: 60px;
+  text-align: center;
+  margin-bottom: 1rem;
+}
 
-.headline {
-  font-size: 1.5rem;
+.form {
+  border-radius: 2rem;
+  background-color: #eaeaea;
+  padding: 2rem;
+  padding-top: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  color: rgb(78, 78, 78);
   text-align: left;
-  color: #7d7d7d;
 }
 
-ul {
-  list-style-type: none;
-  display: flex;
-  gap: 6px;
+.form label {
+  display: block;
+  margin-bottom: 4px;
+  margin-top: 16px;
+}
+
+/********* - Errors - **********/
+
+.error-message {
+  color: red;
+  font-size: 16px;
   margin: 0;
-  margin-top: 0.5em;
-  font-size: 12px;
-  padding-inline-start: 0;
-  color: #7d7d7d;
 }
 
-body {
-  /* font-family: "Arial", sans-serif; */
-  background-color: #f4f4f4;
-  color: #313131;
-  padding: 20px;
-  font-family: "owners-text", sans-serif;
+/********* - Navbar - **********/
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 12rem;
+  margin-right: 12rem;
+  align-items: center;
+  margin-bottom: 5rem;
+}
+
+.nav-items-container {
+  display: flex;
+  align-items: center;
+  /* gap: 2.5rem; */
+  padding: 0.3rem 0.4rem 0.3rem 0.4rem;
+  background-color: #e9e9e9;
+  border-radius: 30px;
+  font-size: 14px;
+  box-shadow: inset 0px 1px 4px -1px rgba(0, 0, 0, 0.17);
+}
+
+.nav-item a {
+  color: #1c1c1c;
   font-weight: 500;
-  font-style: normal;
-  /* max-height: 100vh; */
+  transition: 0.15s ease-in-out;
+  padding: 0.2rem 1.4rem 0.2rem 1.4rem;
 }
 
-button {
+.nav-item :hover {
+  color: rgb(106, 106, 106);
+}
+
+.nav-item.active {
+  background-color: #f4f4f4;
+  border-radius: 30px;
+  box-shadow: rgba(99, 99, 99, 0.1) 0px 2px 8px 0px;
+  padding-top: 0.4rem;
+  padding-bottom: 0.4rem;
+}
+/********* - SAMPLE-PLAYER - **********/
+
+.sample-player-button {
   background-color: transparent !important;
   border: none !important;
   margin: 0;
@@ -57,24 +107,6 @@ button {
   justify-content: center;
   align-items: center;
 }
-
-.searchbar-wrapper {
-  display: flex;
-  flex-direction: column;
-}
-
-.searchbar-wrapper input {
-  padding: 4px;
-}
-
-/* .samples-list {
-  max-height: 70vh;
-  overflow-y: scroll;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-  overflow-x: hidden;
-  
-} */
 
 .music-player-container {
   width: 100%;
@@ -116,34 +148,6 @@ button {
   width: 250px;
 }
 
-#song-progress {
-  width: 250px;
-  -webkit-appearance: none;
-  appearance: none;
-  height: 1.5px;
-  background: #575757;
-  /* border-radius: 5px; */
-  outline: none;
-}
-
-#song-progress::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 8px;
-  height: 8px;
-  background: #575757;
-  border-radius: 50%;
-  cursor: pointer;
-}
-
-#song-progress::-moz-range-thumb {
-  width: 8px;
-  height: 8px;
-  background: #575757;
-  border-radius: 50%;
-  cursor: pointer;
-}
-
 .attribute-container {
   border-left: 0.5px solid rgb(197, 197, 197);
   padding-left: 11px;
@@ -178,6 +182,61 @@ button {
   margin-top: 10px;
 }
 
+.filterable-sample-list {
+  display: flex;
+}
+
+.filter-form {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.headline {
+  font-size: 1.5rem;
+  text-align: left;
+  color: #7d7d7d;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+  gap: 6px;
+  margin: 0;
+  margin-top: 0.5em;
+  font-size: 12px;
+  padding-inline-start: 0;
+  color: #7d7d7d;
+}
+
+body {
+  /* font-family: "Arial", sans-serif; */
+  background-color: #f4f4f4;
+  color: #313131;
+  padding: 20px;
+  font-family: "owners-text", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  /* max-height: 100vh; */
+}
+
+.searchbar-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.searchbar-wrapper input {
+  padding: 4px;
+}
+
+/* .samples-list {
+  max-height: 70vh;
+  overflow-y: scroll;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  overflow-x: hidden;
+  
+} */
+
 /* Sample List Styles */
 
 /* .samples-list {
@@ -185,3 +244,27 @@ button {
   width: 100%;
   overflow: scroll;
 } */
+
+/********* - Media Queries - **********/
+
+@media only screen and (max-width: 1007px) {
+  nav {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .nav-items-container {
+    display: flex;
+    align-items: center;
+
+    padding: 0.3rem 0.4rem 0.3rem 0.4rem;
+    background-color: #e9e9e9;
+    border-radius: 30px;
+    font-size: 12px;
+    box-shadow: inset 0px 1px 4px -1px rgba(0, 0, 0, 0.17);
+  }
+
+  .nav-item a {
+    padding: 0rem 1rem 0rem 1rem;
+  }
+}
