--- a/src/App.css
+++ b/src/App.css
@@ -25,20 +25,26 @@
   margin-bottom: 1rem;
 }
 
-.form {
-  border-radius: 2rem;
-  background-color: #eaeaea;
-  padding: 2rem;
-  padding-top: 1rem;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  color: rgb(78, 78, 78);
-  text-align: left;
-}
-
 .form label {
   display: block;
   margin-bottom: 4px;
   margin-top: 16px;
+  font-weight: 500;
+}
+
+.form input {
+  padding: 0.8rem;
+  background-color: #f4f4f4;
+  color: #1c1c1c;
+  border: solid #1c1c1c 2px;
+  border-radius: 8px;
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.form button {
+  margin-top: 20px;
+  width: max-content;
 }
 
 /********* - Errors - **********/
@@ -60,6 +66,16 @@ nav {
   margin-bottom: 5rem;
 }
 
+nav img {
+  margin-top: 10px;
+}
+
+.nav-container {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
 .nav-items-container {
   display: flex;
   align-items: center;
@@ -69,6 +85,7 @@ nav {
   border-radius: 30px;
   font-size: 14px;
   box-shadow: inset 0px 1px 4px -1px rgba(0, 0, 0, 0.17);
+  margin-top: 0;
 }
 
 .nav-item a {
@@ -88,6 +105,22 @@ nav {
   box-shadow: rgba(99, 99, 99, 0.1) 0px 2px 8px 0px;
   padding-top: 0.4rem;
   padding-bottom: 0.4rem;
+}
+
+.logout-button {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  color: #1c1c1c;
+  border: none;
+  background-color: transparent;
+  padding: 10px 10px;
+  transition: 0.15s ease-in-out;
+  font-size: 16px;
+}
+
+.logout-button:hover {
+  color: var(--secondary-color);
 }
 /********* - SAMPLE-PLAYER - **********/
 
@@ -248,23 +281,4 @@ body {
 /********* - Media Queries - **********/
 
 @media only screen and (max-width: 1007px) {
-  nav {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .nav-items-container {
-    display: flex;
-    align-items: center;
-
-    padding: 0.3rem 0.4rem 0.3rem 0.4rem;
-    background-color: #e9e9e9;
-    border-radius: 30px;
-    font-size: 12px;
-    box-shadow: inset 0px 1px 4px -1px rgba(0, 0, 0, 0.17);
-  }
-
-  .nav-item a {
-    padding: 0rem 1rem 0rem 1rem;
-  }
 }
