--- a/src/App.css
+++ b/src/App.css
@@ -1,56 +1,169 @@
 #root {
-  /* max-width: 1280px; */
-  /* margin: 0 auto; */
+  margin: 0 auto;
   text-align: center;
   box-sizing: border-box;
-  --secondary-color: #00e093;
+  --secondary-color: #03b276;
+  --link-hover: #00905e;
+  --bg-color: #fafafa;
+  /* min-height: 100vh; */
   box-sizing: border-box;
 }
 
+.landingpage {
+  padding-top: 3rem;
+}
+
+.icon-text-container {
+  display: flex;
+  gap: 1.5rem;
+  max-width: 400px;
+  font-size: 18px;
+  margin-bottom: 2rem;
+}
+
+.icon-text-container svg {
+  margin-top: 4px;
+  width: 40px;
+}
+
+.margin-l-s {
+  margin-left: 8px;
+}
+
+.flex {
+  display: flex;
+}
+
+.divider {
+  pointer-events: none;
+}
+
+.button-link {
+  padding: 8px 12px;
+  background-color: var(--secondary-color);
+  color: white;
+  border-radius: 8px;
+  transition: 0.15s ease-in-out;
+}
+
+.button-link:hover {
+  background-color: var(--link-hover);
+  color: white;
+}
+
 /********* - Login/Register Forms - ***********/
+
+.headline-form-section {
+  max-width: 300px;
+  margin: 0 auto;
+}
+
+.sequence-logo-form {
+  width: 150px;
+}
 
 .form-section {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+}
+
+form {
+  width: 80%; /* or you can use vw, for example, width: 80vw; */
+  max-width: 300px;
+  margin: 0 auto;
 }
 
 .form-headline {
   font-weight: 600;
   color: rgb(17, 17, 17);
-  font-size: 1.7rem;
+  font-size: 1.3rem;
   text-transform: capitalize;
   line-height: 60px;
   text-align: center;
-  margin-bottom: 1rem;
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+.headline-form-section p {
+  margin-top: 0;
+  color: #5e5e5e;
 }
 
 .form label {
   display: block;
   margin-bottom: 4px;
   margin-top: 16px;
-  font-weight: 500;
+  font-weight: 300;
+}
+
+.input-container {
+  position: relative;
 }
 
 .form input {
   padding: 0.8rem;
-  background-color: #f4f4f4;
+  background-color: #fafafa;
+  border: solid 1px rgb(172, 172, 172);
   color: #1c1c1c;
-  border: solid #1c1c1c 2px;
   border-radius: 8px;
   font-size: 18px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
 }
 
-.form button {
-  margin-top: 20px;
-  width: max-content;
+.submit-btn {
+  margin-top: 40px;
+  display: block;
+  width: 100%;
 }
 
-/********* - Errors - **********/
+.toggle-password-visibility {
+  background-color: transparent;
+  color: rgb(172, 172, 172);
+  margin: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  align-items: center;
+  font-size: 20px;
+  padding: 13px;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+  border-left: none;
+}
+
+.toggle-password-visibility:hover {
+  background-color: rgb(
+    224,
+    224,
+    224
+  ); /* Change the background color on hover */
+  outline: none;
+  border: solid 1px rgb(172, 172, 172);
+  border-left: none;
+}
+
+.toggle-password-visibility:focus {
+  outline: none;
+  border: solid 1px rgb(172, 172, 172);
+  border-left: none;
+}
+
+/********* - Messages - **********/
 
 .error-message {
   color: red;
+  font-size: 14px;
+  margin: 0;
+}
+
+.welcome-message {
+  color: var(--secondary-color);
   font-size: 16px;
   margin: 0;
 }
@@ -58,16 +171,37 @@
 /********* - Navbar - **********/
 
 nav {
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  margin-left: 12rem;
-  margin-right: 12rem;
+  max-width: 1180px;
+  /* padding-left: 10rem;
+  padding-right: 10rem; */
   align-items: center;
-  margin-bottom: 5rem;
+
+  background: linear-gradient(
+    rgba(250, 250, 250, 0.8) 0%,
+    rgba(250, 250, 250, 0.8) 90%
+  );
+  backdrop-filter: blur(6px);
+  transition: all 0.3s ease-in-out;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 0px 20px;
+}
+
+.hide {
+  top: -80px;
 }
 
 nav img {
   margin-top: 10px;
+}
+
+.logo-class {
+  width: 100px;
 }
 
 .nav-container {
@@ -86,25 +220,32 @@ nav img {
   font-size: 14px;
   box-shadow: inset 0px 1px 4px -1px rgba(0, 0, 0, 0.17);
   margin-top: 0;
+  height: 35px;
 }
 
 .nav-item a {
   color: #1c1c1c;
   font-weight: 500;
   transition: 0.15s ease-in-out;
-  padding: 0.2rem 1.4rem 0.2rem 1.4rem;
+  padding: 0.5rem 1.4rem 0.5rem 1.4rem;
 }
 
 .nav-item :hover {
   color: rgb(106, 106, 106);
 }
 
-.nav-item.active {
+.active {
   background-color: #f4f4f4;
   border-radius: 30px;
   box-shadow: rgba(99, 99, 99, 0.1) 0px 2px 8px 0px;
   padding-top: 0.4rem;
   padding-bottom: 0.4rem;
+  pointer-events: none;
+}
+
+.nav-item a.active:hover {
+  pointer-events: none;
+  color: #1c1c1c;
 }
 
 .logout-button {
@@ -119,8 +260,42 @@ nav img {
   font-size: 16px;
 }
 
+.logout-button:active {
+  border: none;
+}
+
 .logout-button:hover {
   color: var(--secondary-color);
+}
+
+.nav-right-wrapper {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
+.login-button {
+  color: #1c1c1c;
+  font-weight: 300;
+}
+
+.login-button:hover {
+  color: var(--secondary-color);
+}
+
+.register-button {
+  background-color: var(--secondary-color);
+  font-weight: 300;
+  color: white;
+  padding: 4px 16px;
+  border-radius: 20px;
+  transition: 0.15s ease-in-out;
+}
+
+.register-button:hover {
+  background-color: #00905e;
+  color: white;
+  transition: 0.15s ease-in-out;
 }
 /********* - SAMPLE-PLAYER - **********/
 
@@ -277,6 +452,300 @@ body {
   width: 100%;
   overflow: scroll;
 } */
+
+/********* - Homepage - **********/
+
+.homepage-headline {
+  font-weight: 300;
+  text-align: start;
+  font-size: 2.5rem;
+  line-height: 50px;
+  margin-top: 0px;
+  margin-bottom: 2rem;
+}
+
+.homepage-headline-container p {
+  text-align: start;
+  margin: 0;
+}
+
+.homepage-headline span {
+  font-weight: 500;
+}
+
+.button-icon {
+  font-size: 4rem;
+  align-self: start;
+}
+
+.container {
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+  text-align: start;
+}
+
+.wrapper {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(12, 1fr);
+  width: 1180px;
+  height: 90vh;
+  gap: 10px; /* Adjust the gap if needed */
+}
+
+.grid {
+  background: black; /* Assuming the boxes are black based on the screenshot */
+  border-radius: 12px;
+}
+
+/* Child 1 */
+.wrapper .grid:nth-child(1) {
+  grid-column: span 5; /* 40% of the width if 1fr is 8.33% */
+  grid-row: span 6; /* 50% of the height if 1fr is 8.33% */
+  background-color: transparent;
+}
+
+/* Child 2 */
+.wrapper .grid:nth-child(2) {
+  grid-column-start: 6;
+  grid-column-end: span 4; /* 35% of the width, approximately 4 fr */
+  grid-row: span 3; /* 25% of the height, 3 fr */
+  background-color: transparent;
+  border: 1px rgb(214, 214, 214) solid;
+  padding: 1.2rem;
+  padding-left: 1.2rem;
+}
+
+.grid-text {
+  font-weight: 500;
+  margin-bottom: 0.7rem;
+}
+
+.grid p {
+  margin-bottom: 1rem;
+}
+
+.learn-more {
+  font-weight: 500;
+}
+
+/* Child 3 */
+.wrapper .grid:nth-child(3) {
+  grid-column-start: 10;
+  grid-column-end: span 3; /* 25% of the width, approximately 3 fr */
+  grid-row: span 6; /* 50% of the height, 6 fr */
+  background-image: url(./assets/mainpage/jakayla-toney-_SUo0bFBMRc-unsplash.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+/* Child 4 */
+.wrapper .grid:nth-child(4) {
+  grid-column-start: 6;
+  grid-column-end: span 4; /* Same as Child 2 */
+  grid-row-start: 4;
+  grid-row-end: span 3; /* 25% of the height, 3 fr */
+  background-image: url(./assets/mainpage/erwi-AJ3r-NL28PI-unsplash.jpg);
+  background-size: cover;
+  background-position: center;
+  background-size: 120%;
+}
+
+/* Child 5 */
+.wrapper .grid:nth-child(5) {
+  grid-column: span 5; /* Same as Child 1 */
+  grid-row-start: 7;
+  grid-row-end: span 6; /* Same height as Child 1 */
+  background-image: url(./assets/mainpage/andreas-forsberg-rMdOHpO3h5E-unsplash.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+/* Child 6 */
+.wrapper .grid:nth-child(6) {
+  text-align: center;
+  grid-column-start: 6;
+  grid-column-end: span 7; /* Rest of the width, 7 fr */
+  grid-row-start: 7;
+  grid-row-end: span 6; /* Same height as Child 1 and 5 */
+
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  overflow: hidden;
+  padding: 2rem;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 2rem;
+}
+.wrapper .grid:nth-child(6) p {
+  text-align: start;
+}
+
+.grid-6-text {
+  font-weight: 500;
+  font-size: 2rem;
+}
+
+.grid-link {
+  color: white;
+  font-weight: 500;
+  font-size: 1.2rem;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+.grid-link svg:hover {
+  fill: var(--link-hover);
+}
+
+.wrapper .grid:nth-child(6) .grid-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: url(./assets/mainpage/joseph-pearson-b6fKcY3s8VE-unsplash.jpg);
+  /* background: url(./assets/mainpage/amin-asbaghipour-wLJqFMTQfa0-unsplash.jpg); */
+
+  background-size: cover;
+  background-position: center;
+  filter: brightness(1.2);
+}
+
+.grid-background::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  backdrop-filter: blur(7px);
+  -webkit-backdrop-filter: blur(7px);
+}
+
+.wrapper .grid:nth-child(6) .grid-content {
+  position: relative;
+  z-index: 1; /* Ensures content is above the blurred background */
+  color: white;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 2rem;
+}
+
+/********* - Footer - **********/
+
+footer {
+  background-color: var(--secondary-color);
+  /* background-color: #1c1c1c; */
+  color: white;
+  /* position: fixed;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  margin-bottom: 0px; */
+}
+
+.container-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.suport-title {
+  font-weight: 500;
+  text-align: left;
+}
+
+.container-footer a {
+  color: white;
+}
+
+.upper-footer {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 3rem;
+  padding-bottom: 2rem;
+}
+
+.upper-footer a {
+  color: white;
+  text-align: left;
+  transition: 0.15s ease-in-out;
+}
+
+.upper-footer a:hover {
+  color: rgb(224, 224, 224);
+}
+
+.upper-footer-column {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.profile-login-footer {
+  font-weight: 500;
+  display: flex;
+  gap: 8px;
+}
+
+.profile-login-footer img {
+  width: 16px;
+}
+
+.lower-footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 3rem;
+  align-items: center;
+  position: relative;
+}
+
+.lower-footer:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 0.5px;
+  width: 1px;
+  width: 95%;
+  background-color: rgb(255, 255, 255);
+  margin: 0 auto;
+}
+
+.logo-container-footer {
+  display: flex;
+  gap: 18px;
+  font-size: 22px;
+}
+
+.logo-footer {
+  width: 70px;
+  margin-top: 5px;
+}
+
+.middle-footer {
+  padding: 1rem 3rem;
+}
+
+.middle-footer a {
+  transition: 0.15s ease-in-out;
+}
+
+.middle-footer a:hover {
+  color: rgb(224, 224, 224);
+}
 
 /********* - Media Queries - **********/
 
