--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,11 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
+  --secondary-color: #03b276;
+  --link-hover: #035639;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #fafafa;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,13 +14,20 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+main {
+  padding-top: 6rem;
+  max-width: 1180px;
+  margin: 0 auto;
+  padding-bottom: 7rem;
+}
+
 a {
   /* font-weight: 500; */
-  color: #646cff;
+  color: var(--secondary-color);
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: var(--link-hover);
 }
 
 body {
@@ -27,6 +35,7 @@ body {
   background-color: #fafafa;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
+  padding: 0;
   /* display: flex;
   place-items: center;
   min-width: 320px; */
