--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,11 @@
   box-sizing: border-box;
 }
 
+.text-accent {
+  color: var(--secondary-color);
+  font-weight: 500;
+}
+
 form {
   max-width: 400px;
   margin: 0 auto;
@@ -75,7 +80,7 @@ form {
 }
 
 .form {
-  width: 80%; /* or you can use vw, for example, width: 80vw; */
+  width: 80%;
   max-width: 300px;
   margin: 0 auto;
 }
@@ -120,12 +125,26 @@ form {
   box-sizing: border-box;
 }
 
-.submit-btn {
+.next-step-btn {
   margin-top: 40px;
   display: block;
   width: 100%;
   transition: 0.15s ease-in-out;
   border: none;
+  background-color: var(--secondary-color);
+}
+
+.next-step-btn:hover {
+  background-color: var(--link-hover);
+}
+
+.submit-btn {
+  margin-top: 40px;
+  width: 100%;
+  max-width: 300px;
+  transition: 0.15s ease-in-out;
+  border: none;
+  background-color: var(--secondary-color);
 }
 
 .submit-btn:active {
@@ -136,6 +155,7 @@ form {
 .submit-btn:hover {
   outline: none;
   border: none;
+  background-color: var(--link-hover);
 }
 
 .toggle-password-visibility {
@@ -181,8 +201,6 @@ form {
 
 .success-message {
   color: var(--secondary-color);
-  font-size: 16px;
-  margin: 0;
 }
 
 /********* - Navbar - **********/
@@ -206,7 +224,7 @@ nav {
   top: 0;
   left: 0;
   right: 0;
-  padding: 0px 20px;
+  padding: 4px 20px;
 }
 
 .hide {
@@ -837,6 +855,22 @@ footer {
 
 /********* - Sample Upload Form - **********/
 
+.back-step-btn {
+  display: flex;
+  gap: 8px;
+  background-color: transparent;
+  color: var(--secondary-color);
+  align-items: center;
+  margin: 0 auto;
+  font-weight: 300;
+  border: none;
+}
+
+.back-step-btn:hover {
+  outline: none;
+  color: var(--link-hover);
+}
+
 .upload-form input,
 .upload-form select {
   background-color: #ffffff;
@@ -853,7 +887,7 @@ footer {
   font-size: 1.2rem;
 }
 
-.input-container {
+.input-container_upload-form {
   display: flex;
   flex-direction: column;
   margin-top: 1.5rem;
@@ -890,6 +924,47 @@ footer {
   width: 50%;
 }
 
+.redirect-buttons-container {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  font-size: 1.2rem;
+  margin-top: 4rem;
+}
+
+/********* - Tag Manager - **********/
+.tags-container {
+  margin: 0 auto;
+  max-width: 820px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  justify-content: center;
+  margin-top: 2rem;
+}
+
+.tag-button {
+  background-color: white;
+  color: #313131;
+  border: solid 1px var(--secondary-color);
+}
+.tag-button:hover {
+  background-color: var(--secondary-color);
+  border: solid 1px var(--secondary-color);
+}
+
+.tag-button:active {
+  outline: none;
+  background-color: var(--link-hover);
+}
+
+.tag-button:focus {
+  outline: none;
+}
+
+.tag-selected {
+  background-color: var(--secondary-color);
+}
 /********* - Media Queries - **********/
 
 @media only screen and (max-width: 1007px) {
