--- a/src/App.css
+++ b/src/App.css
@@ -139,7 +139,7 @@ form {
 }
 
 .submit-btn {
-  margin-top: 40px;
+  margin-top: 30px;
   width: 100%;
   max-width: 300px;
   transition: 0.15s ease-in-out;
@@ -205,7 +205,7 @@ form {
 
 /********* - Navbar - **********/
 
-nav {
+.main-navigation {
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -224,7 +224,8 @@ nav {
   top: 0;
   left: 0;
   right: 0;
-  padding: 4px 20px;
+  padding: 4px 10px;
+  z-index: 100;
 }
 
 .hide {
@@ -362,8 +363,9 @@ nav img {
   border-radius: 6px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 6px 10px;
-  padding-right: 0px;
+  padding-right: 10px;
   margin-bottom: 5px;
+  box-sizing: border-box;
   /* border-bottom: 1px solid rgb(207, 207, 207); */
 }
 
@@ -414,10 +416,6 @@ nav img {
 .border-right {
   border-right: 0.5px solid rgb(197, 197, 197);
   padding-right: 11px;
-}
-
-.more-button svg {
-  color: rgb(108, 108, 108);
 }
 
 .icon svg {
@@ -478,22 +476,6 @@ body {
   padding: 4px;
 }
 
-/* .samples-list {
-  max-height: 70vh;
-  overflow-y: scroll;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-  overflow-x: hidden;
-  
-} */
-
-/* Sample List Styles */
-
-/* .samples-list {
-  max-height: 550px;
-  width: 100%;
-  overflow: scroll;
-} */
 .page-controller {
   margin-top: 20px;
   display: flex;
@@ -523,6 +505,15 @@ body {
   padding: 8px;
 }
 
+.page-controller-button:disabled {
+  cursor: not-allowed;
+  color: #bdbdbd;
+}
+
+.page-controller-button:disabled .page-controll-button-descr {
+  color: #bdbdbd;
+}
+
 .page-controll-button-descr {
   font-size: 1rem;
   color: rgb(121, 121, 121);
@@ -534,6 +525,89 @@ body {
   justify-content: center;
   gap: 5px;
 }
+
+/********* - Context Menu - Sample Player - **********/
+
+.context-menu-container {
+  position: relative;
+}
+
+.context-menu {
+  position: absolute;
+  background-color: #ececec;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border-radius: 6px;
+  display: flex;
+  flex-direction: column;
+  padding: 12px;
+  top: 10;
+  right: 0px;
+  z-index: 20;
+  min-width: none;
+  gap: 20px;
+}
+
+.context-menu-button-activate {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  color: #5e5e5e;
+  border: none;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-right: 0px;
+  padding-left: 0px;
+}
+
+.context-menu-button-activate:focus {
+  outline: solid var(--secondary-color) 1px;
+}
+
+.context-menu-button-activate svg {
+  font-size: 26px;
+}
+
+.context-menu a {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  min-width: 150px;
+  color: rgb(30, 30, 30);
+  transition: 0.15s ease-in-out;
+}
+
+.context-menu:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 0.5px;
+  background-color: rgb(198, 198, 198);
+  top: 45px;
+  left: 0;
+}
+
+.context-menu a:hover {
+  color: var(--secondary-color);
+}
+
+.context-menu-button {
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+  color: rgb(30, 30, 30);
+  font-weight: 300;
+  text-align: left;
+  gap: 16px;
+  padding: 0;
+  border: none;
+}
+
+.context-menu-button:hover {
+  color: var(--secondary-color);
+  border: none;
+}
+
 /********* - Homepage - **********/
 
 .homepage-headline {
@@ -837,6 +911,7 @@ footer {
   background-color: #ebebeb;
   cursor: pointer;
   min-width: 300px;
+  min-height: 120px;
   padding-left: 1rem;
   padding-right: 1rem;
   padding-top: 1rem;
@@ -929,13 +1004,29 @@ footer {
   justify-content: center;
   gap: 1rem;
   font-size: 1.2rem;
-  margin-top: 4rem;
+  margin-top: 2rem;
+}
+
+.redirect-button {
+  display: flex;
+  align-items: center;
+  padding: 8px 12px;
+  background-color: var(--secondary-color);
+  color: white;
+  border-radius: 8px;
+  border: none;
+  gap: 8px;
+}
+
+.redirect-button:hover {
+  background-color: var(--link-hover);
+  color: white;
 }
 
 /********* - Tag Manager - **********/
 .tags-container {
   margin: 0 auto;
-  max-width: 820px;
+  max-width: 920px;
   display: flex;
   flex-wrap: wrap;
   gap: 0.5rem;
@@ -965,6 +1056,102 @@ footer {
 .tag-selected {
   background-color: var(--secondary-color);
 }
+
+/********* - Dashboard - **********/
+
+.profile-card {
+  background-color: white;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  border-radius: 12px;
+  padding: 2rem;
+  max-width: 600px;
+  margin: 0 auto;
+  margin-bottom: 3rem;
+  /* background: url("/src/assets/bg-image.svg"); */
+  /* background-size: cover; */
+}
+
+.profile-card-2 {
+  /* background-color: white; */
+  background: linear-gradient(
+    rgba(250, 250, 250, 0.8) 0%,
+    rgba(250, 250, 250, 0.8) 90%
+  );
+  backdrop-filter: blur(6px);
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  border-radius: 12px 12px 0px 0px;
+  padding: 1rem 2rem;
+  max-width: 600px;
+  margin: 0 auto;
+  /* z-index: 5;
+  position: sticky;
+  top: -10px; */
+}
+
+.profile-picture-container {
+  display: flex;
+  justify-content: center;
+}
+
+.profile-picture-container img {
+  object-fit: cover;
+  max-width: 180px;
+  max-height: 180px;
+  border-radius: 50%;
+}
+
+.username {
+  font-weight: 500;
+  margin-bottom: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.role {
+  font-size: 1.2rem;
+  color: #5e5e5e;
+}
+
+.user-stats {
+  margin-top: 2.5rem;
+  display: flex;
+  justify-content: center;
+  gap: 5rem;
+  font-weight: 500;
+}
+
+.dashboard-sub-navigation {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+}
+
+.sample-list-container {
+  background-color: #e9e9e9;
+  padding: 2rem;
+  max-width: 600px;
+  margin: 0 auto;
+  /* max-height: 500px;
+  overflow: scroll; */
+}
+
+/********* - Modal - **********/
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  background-color: rgb(234, 234, 234);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  padding: 12px;
+  border-radius: 10px;
+  z-index: 50;
+}
+
 /********* - Media Queries - **********/
 
 @media only screen and (max-width: 1007px) {
