--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,12 @@
   box-sizing: border-box;
 }
 
+h2 {
+  font-size: 1.3rem;
+  margin-top: 2.5rem;
+  font-weight: 300;
+}
+
 .text-accent {
   color: var(--secondary-color);
   font-weight: 500;
@@ -126,12 +132,17 @@ form {
 }
 
 .next-step-btn {
+  margin: 0 auto;
   margin-top: 40px;
-  display: block;
+  max-width: 400px; /* display: block; */
   width: 100%;
   transition: 0.15s ease-in-out;
   border: none;
   background-color: var(--secondary-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 14px;
 }
 
 .next-step-btn:hover {
@@ -928,7 +939,15 @@ footer {
   margin-bottom: 1rem;
 }
 
-/********* - Sample Upload Form - **********/
+/********* - Sample related Forms - **********/
+
+.sample-form-headline {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 14px;
+  margin-bottom: 3rem;
+}
 
 .back-step-btn {
   display: flex;
@@ -946,8 +965,8 @@ footer {
   color: var(--link-hover);
 }
 
-.upload-form input,
-.upload-form select {
+.sample-form input,
+.sample-form select {
   background-color: #ffffff;
   border: 1px solid #979797;
   border-radius: 8px;
@@ -957,12 +976,12 @@ footer {
   box-sizing: border-box;
 }
 
-.upload-form label {
+.sample-form label {
   color: #313131;
   font-size: 1.2rem;
 }
 
-.input-container_upload-form {
+.input-container-sample-form {
   display: flex;
   flex-direction: column;
   margin-top: 1.5rem;
@@ -1062,15 +1081,55 @@ footer {
 
 .profile-card {
   background-color: white;
+
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   border-radius: 12px;
   padding: 2rem;
   max-width: 600px;
+  /* background: url("/src/assets/card-experimental.svg"); */
+  background-size: cover;
+  background-position: center;
   margin: 0 auto;
   margin-bottom: 3rem;
-  /* background: url("/src/assets/bg-image.svg"); */
+  position: relative;
+  overflow: hidden;
+  /* color: white; */
+  background: url("/src/assets/bg-image.svg");
   /* background-size: cover; */
 }
+
+/* .profile-card::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: url("./assets/mainpage/codioful-formerly-gradienta-LeG68PrXA6Y-unsplash.jpg");
+  opacity: 0.5;
+  background-size: cover;
+  background-position: center;
+  z-index: -1;
+  filter: blur(20px); 
+  transform: scale(1.1);
+ }
+.profile-card::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(210, 210, 210, 0.3); 
+  z-index: 0;
+}
+
+.profile-card > * {
+  position: relative;
+  z-index: 1;
+} */
 
 .profile-card-2 {
   /* background-color: white; */
@@ -1119,8 +1178,12 @@ footer {
   margin-top: 2.5rem;
   display: flex;
   justify-content: center;
-  gap: 5rem;
+  gap: 3rem;
   font-weight: 500;
+}
+
+.stats-container {
+  min-width: 100px;
 }
 
 .dashboard-sub-navigation {
