--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,10 @@
 #root {
   margin: 0 auto;
   text-align: center;
-  box-sizing: border-box;
   --secondary-color: #03b276;
   --link-hover: #00905e;
   --bg-color: #fafafa;
-  --cancel-color: rgb(209, 36, 36);
-  /* min-height: 100vh; */
+  --cancel-color: rgb(223, 118, 13);
   box-sizing: border-box;
 }
 
@@ -16,9 +14,15 @@ h2 {
   font-weight: 300;
 }
 
+h3 {
+  color: rgb(121, 121, 121);
+  font-size: 1.2rem;
+}
+
 .text-accent {
   color: var(--secondary-color);
   font-weight: 500;
+  margin-top: 0;
 }
 
 form {
@@ -135,7 +139,7 @@ form {
 .next-step-btn {
   margin: 0 auto;
   margin-top: 40px;
-  max-width: 400px; /* display: block; */
+  max-width: 400px;
   width: 100%;
   transition: 0.15s ease-in-out;
   border: none;
@@ -187,11 +191,7 @@ form {
 }
 
 .toggle-password-visibility:hover {
-  background-color: rgb(
-    224,
-    224,
-    224
-  ); /* Change the background color on hover */
+  background-color: rgb(224, 224, 224);
   outline: none;
   border: solid 1px rgb(172, 172, 172);
   border-left: none;
@@ -209,10 +209,17 @@ form {
   color: red;
   font-size: 14px;
   margin: 0;
+  margin-bottom: 1rem;
+}
+
+.cancel-message {
+  color: var(--cancel-color);
+  margin-bottom: 1rem;
 }
 
 .success-message {
   color: var(--secondary-color);
+  margin-bottom: 1rem;
 }
 
 /********* - Navbar - **********/
@@ -222,8 +229,6 @@ form {
   display: flex;
   justify-content: space-between;
   max-width: 1180px;
-  /* padding-left: 10rem;
-  padding-right: 10rem; */
   align-items: center;
 
   background: linear-gradient(
@@ -326,6 +331,10 @@ nav img {
   align-items: center;
 }
 
+.mobile-navigation {
+  display: none;
+}
+
 .login-button {
   color: #1c1c1c;
   font-weight: 300;
@@ -378,7 +387,6 @@ nav img {
   padding-right: 10px;
   margin-bottom: 5px;
   box-sizing: border-box;
-  /* border-bottom: 1px solid rgb(207, 207, 207); */
 }
 
 .tags {
@@ -432,7 +440,7 @@ nav img {
 
 .icon svg {
   width: 25px;
-  height: auto; /* This will keep the aspect ratio intact */
+  height: auto;
 }
 
 .like-button {
@@ -536,6 +544,11 @@ body {
   align-items: center;
   justify-content: center;
   gap: 5px;
+}
+
+.pages-display {
+  color: rgb(121, 121, 121);
+  font-weight: 500;
 }
 
 /********* - Context Menu - Sample Player - **********/
@@ -647,7 +660,6 @@ body {
 
 .container {
   display: flex;
-  /* align-items: center; */
   justify-content: center;
   text-align: start;
 }
@@ -658,26 +670,26 @@ body {
   grid-template-rows: repeat(12, 1fr);
   width: 1180px;
   height: 90vh;
-  gap: 10px; /* Adjust the gap if needed */
+  gap: 10px;
 }
 
 .grid {
-  background: black; /* Assuming the boxes are black based on the screenshot */
+  background: black;
   border-radius: 12px;
 }
 
 /* Child 1 */
 .wrapper .grid:nth-child(1) {
-  grid-column: span 5; /* 40% of the width if 1fr is 8.33% */
-  grid-row: span 6; /* 50% of the height if 1fr is 8.33% */
+  grid-column: span 5;
+  grid-row: span 6;
   background-color: transparent;
 }
 
 /* Child 2 */
 .wrapper .grid:nth-child(2) {
   grid-column-start: 6;
-  grid-column-end: span 4; /* 35% of the width, approximately 4 fr */
-  grid-row: span 3; /* 25% of the height, 3 fr */
+  grid-column-end: span 4;
+  grid-row: span 3;
   background-color: transparent;
   border: 1px rgb(214, 214, 214) solid;
   padding: 1.2rem;
@@ -700,8 +712,8 @@ body {
 /* Child 3 */
 .wrapper .grid:nth-child(3) {
   grid-column-start: 10;
-  grid-column-end: span 3; /* 25% of the width, approximately 3 fr */
-  grid-row: span 6; /* 50% of the height, 6 fr */
+  grid-column-end: span 3;
+  grid-row: span 6;
   background-image: url(./assets/mainpage/jakayla-toney-_SUo0bFBMRc-unsplash.jpg);
   background-size: cover;
   background-position: center;
@@ -710,9 +722,9 @@ body {
 /* Child 4 */
 .wrapper .grid:nth-child(4) {
   grid-column-start: 6;
-  grid-column-end: span 4; /* Same as Child 2 */
+  grid-column-end: span 4;
   grid-row-start: 4;
-  grid-row-end: span 3; /* 25% of the height, 3 fr */
+  grid-row-end: span 3;
   background-image: url(./assets/mainpage/erwi-AJ3r-NL28PI-unsplash.jpg);
   background-size: cover;
   background-position: center;
@@ -721,9 +733,9 @@ body {
 
 /* Child 5 */
 .wrapper .grid:nth-child(5) {
-  grid-column: span 5; /* Same as Child 1 */
+  grid-column: span 5;
   grid-row-start: 7;
-  grid-row-end: span 6; /* Same height as Child 1 */
+  grid-row-end: span 6;
   background-image: url(./assets/mainpage/andreas-forsberg-rMdOHpO3h5E-unsplash.jpg);
   background-size: cover;
   background-position: center;
@@ -733,9 +745,9 @@ body {
 .wrapper .grid:nth-child(6) {
   text-align: center;
   grid-column-start: 6;
-  grid-column-end: span 7; /* Rest of the width, 7 fr */
+  grid-column-end: span 7;
   grid-row-start: 7;
-  grid-row-end: span 6; /* Same height as Child 1 and 5 */
+  grid-row-end: span 6;
 
   background-size: cover;
   background-position: center;
@@ -778,8 +790,6 @@ body {
   right: 0;
   bottom: 0;
   background: url(./assets/mainpage/joseph-pearson-b6fKcY3s8VE-unsplash.jpg);
-  /* background: url(./assets/mainpage/amin-asbaghipour-wLJqFMTQfa0-unsplash.jpg); */
-
   background-size: cover;
   background-position: center;
   filter: brightness(1.2);
@@ -798,7 +808,7 @@ body {
 
 .wrapper .grid:nth-child(6) .grid-content {
   position: relative;
-  z-index: 1; /* Ensures content is above the blurred background */
+  z-index: 1;
   color: white;
   padding: 2rem;
   display: flex;
@@ -812,13 +822,7 @@ body {
 
 footer {
   background-color: var(--secondary-color);
-  /* background-color: #1c1c1c; */
   color: white;
-  /* position: fixed;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  margin-bottom: 0px; */
 }
 
 .container-footer {
@@ -852,7 +856,6 @@ footer {
 
 .upper-footer a:hover {
   color: rgb(224, 224, 224);
-  /* text-decoration: underline; */
 }
 
 .upper-footer-column {
@@ -1085,7 +1088,7 @@ footer {
 }
 
 .tag-selected:hover .delete-tag-icon {
-  color: white; /* Replace with the color you want on hover */
+  color: white;
 }
 
 .delete-tag-icon {
@@ -1101,58 +1104,25 @@ footer {
 
 .profile-card {
   background-color: white;
-
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   border-radius: 12px;
   padding: 2rem;
   max-width: 600px;
-  /* background: url("/src/assets/card-experimental.svg"); */
   background-size: cover;
   background-position: center;
   margin: 0 auto;
   margin-bottom: 3rem;
   position: relative;
   overflow: hidden;
-  /* color: white; */
   background: url("/src/assets/bg-image.svg");
-  /* background-size: cover; */
-}
-
-/* .profile-card::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  background: url("./assets/mainpage/codioful-formerly-gradienta-LeG68PrXA6Y-unsplash.jpg");
-  opacity: 0.5;
-  background-size: cover;
-  background-position: center;
-  z-index: -1;
-  filter: blur(20px); 
-  transform: scale(1.1);
- }
-.profile-card::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(210, 210, 210, 0.3); 
-  z-index: 0;
 }
 
 .profile-card > * {
   position: relative;
   z-index: 1;
-} */
+}
 
 .profile-card-2 {
-  /* background-color: white; */
   background: linear-gradient(
     rgba(250, 250, 250, 0.8) 0%,
     rgba(250, 250, 250, 0.8) 90%
@@ -1163,9 +1133,6 @@ footer {
   padding: 1rem 2rem;
   max-width: 600px;
   margin: 0 auto;
-  /* z-index: 5;
-  position: sticky;
-  top: -10px; */
 }
 
 .profile-picture-container {
@@ -1215,10 +1182,9 @@ footer {
 .sample-list-container {
   background-color: #e9e9e9;
   padding: 2rem;
+  padding-top: 1rem;
   max-width: 600px;
   margin: 0 auto;
-  /* max-height: 500px;
-  overflow: scroll; */
 }
 
 .cancel-button {
@@ -1231,6 +1197,10 @@ footer {
 
 /********* - Modal - **********/
 
+dialog {
+  margin: 0;
+}
+
 .modal {
   box-sizing: border-box;
   position: fixed;
@@ -1239,8 +1209,7 @@ footer {
   /*tranform shouldnt center the modal but it does...*/
   /*Probably because of the position of the context menu*/
   width: 330px;
-
-  transform: translate(-100%, -100%);
+  transform: translate(-50%, -50%);
   background-color: rgb(234, 234, 234);
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 16px 34px;
@@ -1316,4 +1285,36 @@ footer {
 /********* - Media Queries - **********/
 
 @media only screen and (max-width: 1007px) {
+  /********* - Mobile Navigation - **********/
+
+  .mobile-navigation {
+    display: block; /* Show only in mobile view */
+    position: absolute;
+    right: 15px; /* Adjust as needed */
+    top: 15px; /* Adjust for vertical alignment */
+    /* Additional responsive styling */
+    cursor: pointer;
+  }
+
+  .burger-menu-icon {
+    font-size: 2rem;
+    color: #1c1c1c;
+  }
+
+  .nav-items-container {
+    display: none; /* Hide initially in mobile view */
+  }
+
+  .nav-items-container.show {
+    display: block; /* Show when hamburger menu is clicked */
+    /* Additional styling for visible mobile menu */
+  }
+
+  .logout-button {
+    display: none;
+  }
+
+  .logout-button.show {
+    display: block;
+  }
 }
