--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,12 @@
   box-sizing: border-box;
 }
 
+.h1-icon {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
 h2 {
   font-size: 1.3rem;
   margin-top: 2.5rem;
@@ -51,8 +57,20 @@ form {
   margin-left: 8px;
 }
 
+.margin-top-20 {
+  margin-top: 20px;
+}
+
 .flex {
   display: flex;
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.7rem;
 }
 
 .divider {
@@ -211,6 +229,21 @@ form {
   background-color: rgb(133, 197, 175);
 }
 
+/********* - Edit-Profile-Picture - **********/
+
+.profile-picture-edit-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+.file-upload-wrapper {
+  display: flex;
+  justify-content: center;
+  padding-top: 2rem;
+  margin: 0 auto;
+}
 /********* - Messages - **********/
 
 .error-message {
@@ -1165,15 +1198,44 @@ footer {
 }
 
 .profile-picture-container {
-  display: flex;
+  display: inline-block;
   justify-content: center;
+  position: relative;
+  width: 180px;
+  height: 180px;
+  overflow: hidden;
 }
 
 .profile-picture-container img {
   object-fit: cover;
-  max-width: 180px;
-  max-height: 180px;
+  width: 100%;
+
   border-radius: 50%;
+}
+
+.edit-profile-picture {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.15s ease-in-out;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  overflow: hidden;
+  border-radius: 50%;
+  transition: opacity 0.2s ease-in-out;
+  font-weight: 500;
+  opacity: 0;
+  gap: 10px;
+}
+
+.edit-profile-picture:hover {
+  opacity: 1;
+  color: white;
 }
 
 .username {
