--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@
   margin: 0 auto;
 }
 
+.text-align-left {
+  text-align: left;
+}
+
 .h1-icon {
   display: flex;
   align-items: center;
@@ -501,9 +505,12 @@ nav img {
   justify-content: center;
 }
 
+/* .total-samples {
+    text-align: left;
+  } */
+
 .filter-form {
-  padding-left: 1rem;
-  padding-right: 1rem;
+  margin: 0;
 }
 
 .headline {
@@ -1310,8 +1317,14 @@ footer {
 .cancel-button:hover {
   background-color: rgb(147, 21, 21);
 }
-
-/********* - Modal - **********/
+/************* - Browse - **************/
+.filter-sample-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+/************* - Modal - **************/
 
 dialog {
   margin: 0;
@@ -1457,7 +1470,7 @@ dialog {
   }
 }
 
-@media only screen and (max-width: 540px) {
+@media only screen and (max-width: 640px) {
   #root {
     overflow: hidden;
   }
